--- a/index.html
+++ b/index.html
@@ -1,13 +1,71 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>집라이프 | 부동산 경매·집수리 플랫폼</title>
+  <title>집라이프 | 집수리 · 부동산 · 생활</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="집라이프는 부동산 경매와 집수리를 연결하는 라이프 플랫폼입니다." />
+  <meta name="description" content="집수리, 부동산 경매, 생활 서비스를 연결하는 집라이프" />
+  <style>
+    body {
+      margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+      background: #f5f7fb;
+      color: #222;
+    }
+    header {
+      padding: 60px 20px;
+      text-align: center;
+      background: #3F4EDF;
+      color: white;
+    }
+    section {
+      max-width: 900px;
+      margin: 60px auto;
+      padding: 0 20px;
+      line-height: 1.7;
+    }
+    .box {
+      background: white;
+      border-radius: 12px;
+      padding: 30px;
+      margin-bottom: 20px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.08);
+    }
+    footer {
+      text-align: center;
+      padding: 40px 20px;
+      color: #777;
+      font-size: 14px;
+    }
+  </style>
 </head>
 <body>
-  <h1>집라이프 (ZipLife)</h1>
-  <p>홈페이지 준비 중입니다.</p>
+
+<header>
+  <h1>집라이프</h1>
+  <p>집과 삶을 연결하는 실전형 플랫폼</p>
+</header>
+
+<section>
+  <div class="box">
+    <h2>🏠 집수리</h2>
+    <p>현장 경험 기반의 실전 집수리 정보와 서비스</p>
+  </div>
+
+  <div class="box">
+    <h2>📊 부동산 경매</h2>
+    <p>실제 투자자가 정리한 경매 노하우와 전략</p>
+  </div>
+
+  <div class="box">
+    <h2>🧠 생활 · 도구 · 앱</h2>
+    <p>핑퐁, 집라이프 앱 등 생활을 돕는 실험적 서비스</p>
+  </div>
+</section>
+
+<footer>
+  © 2025 Ziplife.app
+</footer>
+
 </body>
 </html>
